--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A happy new years card in the form of a web app!">
+  <meta name="description" content="A digital card for 2022!">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="flutter_new_years_2022">
+  <meta name="apple-mobile-web-app-title" content="flutter_greetings_2022">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>flutter_new_years_2022</title>
+  <title>flutter_greetings_2022</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
@@ -37,7 +37,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '704654478';
+    var serviceWorkerVersion = '2442280483';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
